--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f8fafc; 
+            background-color:rgb(245, 245, 245); 
         }
         .header-glass {
             backdrop-filter: blur(10px);
@@ -31,7 +31,7 @@
         }
     </style>
 </head>
-<body class="min-h-screen flex flex-col">
+<body class="min-h-screen flex flex-col pb-24 pt-5">
 
     <!-- Header -->
     {% include "partials/header.html" %}
