--- a/app/templates/page404.html
+++ b/app/templates/page404.html
@@ -10,7 +10,7 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f8fafc; 
+            background-color:rgb(245, 245, 245); 
         }
         .header-glass, .footer-glass {
             backdrop-filter: blur(10px);
