--- a/app/templates/partials/header.html
+++ b/app/templates/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header-glass fixed top-4 left-4 right-4 mx-auto max-w-7xl rounded-xl shadow-md z-50 border border-gray-100 p-4 bg-white/85 backdrop-blur-sm">
+<header class="header-glass fixed top-4 left-4 right-4 mx-auto max-w-7xl rounded-xl shadow-md z-50 border border-gray-250 p-4 bg-gray-50/90 backdrop-blur-sm">
     <div class="flex items-center justify-between">
         <!-- Логотип -->
         <a href="/" class="flex items-center space-x-2">
